wow.js toegevoegd
de volgende library toegevoegd waarin animaties tijdens scrollen worden toegepast.

--- a/gradient.html
+++ b/gradient.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Granim.js</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -17,5 +17,5 @@
 </body>
 
 </html>
-<script src="granim.min.js"></script>
-<script src="script.js"></script>
+<script src="/js/granim.min.js"></script>
+<script src="/js/script.js"></script>
