Slick.js fotocarousel
in plaats van tekst heb ik nu fotos toegevoegd aan de carousel van slick. waardoor je meer javascript gebruikt en het weer iets complexer wordt.

--- a/slick.html
+++ b/slick.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wow.js</title>
+    <title>Slick.js</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/slick.css" />
     <link rel="stylesheet" href="/css/slick-theme.css" />
@@ -14,9 +14,9 @@
     <section id="slideshow">
         <h1>Slick slider</h1>
         <div class="slick">
-            <div>foto 1</div>
-            <div>foto 1</div>
-            <div>foto 1</div>
+            <div><img src="/img/pexels-photo-248771.jpeg" alt=""></div>
+            <div><img src="/img/pexels-photo-371589.jpeg" alt=""></div>
+            <div><img src="/img/pexels-photo-589840.jpeg" alt=""></div>
         </div>
     </section>
 
